--- a/app/index.html
+++ b/app/index.html
@@ -8,18 +8,20 @@
     <meta name="description" content="" />
     <title>SUNTECHNICA | Вся сантехника в одном месте</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
+    <a id="button"></a>
+
     <div id="fullpage">
 
-        <div class="section">
+        <div class="section  fp-auto-height-responsive">
 
-            <header class="header">
+            <header id="header" class="header">
                 <div class="container">
                     <div class="header__inner">
 
@@ -27,6 +29,11 @@
                             <a class="logo" href="#">
                                 <img src="images/logo.svg" alt="">
                             </a>
+                            <div class="menu-btn">
+                                <div class="menu-btn__line"></div>
+                                <div class="menu-btn__line"></div>
+                                <div class="menu-btn__line"></div>
+                            </div>
                             <nav class="header__menu">
                                 <ul class="header__menu-list">
                                     <li class="header__menu-item active">
@@ -53,7 +60,7 @@
                                 <a class="header__contacts-tel" href="tel:79876543210">+7 987 654 32 10</a>
                                 <a class="header__contacts-email" href="mailto:info.sunchechtics@mail.ru">info.sunchechtics@mail.ru</a>
                             </div>
-                            <button class="call-btn">Заказать звонок</button>
+                            <a class="call-btn popup-modal" href="#call-me-modal">Заказать звонок</a>
                         </div>
 
                     </div>
@@ -195,7 +202,9 @@
                     <div class="our-production__inner">
 
                         <div class="our-production__content-top">
-                            <h1 class="our-production__title">Наша продукция</h1>
+                            <div class="our-production__box-title">
+                                <h1 class="our-production__title">Наша продукция</h1>
+                            </div>
                             <div class="our-production__box">
                                 <div class="our-production__box-img">
                                     <picture>
@@ -386,7 +395,7 @@
                                     <input class="contact-us__consent form-style" type="checkbox" name="consent" required>
                                     <label for="">Я даю согласие на обработку персональных данных</label>
                                 </div>
-                                <button class="call-btn">Заказать звонок</button>
+                                <a class="call-btn popup-modal" href="#success-modal">Заказать звонок</a>
                             </form>
                             <div class="contact-us__contacts">
                                 <h3 class="contact-us__contacts-tel">
@@ -434,7 +443,7 @@
                             <a class="footer__link-insta" href="#">
                                 <img src="images/icon-insta.svg" alt="">
                             </a>
-                            <button class="call-btn">Заказать звонок</button>
+                            <a class="call-btn popup-modal" href="#call-me-modal">Заказать звонок</a>
                         </div>
 
                     </div>
@@ -443,17 +452,52 @@
 
         </div>
 
+    </div>
 
+    <div id="call-me-modal" class="mfp-hide white-popup-block">
 
+        <a class="close-modal popup-modal-dismiss" href="#"></a>
+        <h2 class="contact-us__title">
+            Свяжитесь с нами
+        </h2>
+        <p class="contact-us__text">
+            Оставьте свои контактные данные, и мы свяжемся с вами как можно скорее
+        </p>
+        <div class="contact-us__content">
+            <form class="contact-us__form" action="" method="">
+                <div class="contact-us__form-box">
+                    <label for="">Ваше имя</label>
+                    <input id="username" class="contact-us__input-name" type="text" name="name" placeholder="Константин" required>
+                </div>
+                <div class="contact-us__form-box">
+                    <label for="">Номер телефона</label>
+                    <input class="contact-us__input-tel" type="tel" name="tel" placeholder="+7 XXX XXX XX XX" required>
+                </div>
+                <div class="contact-us__checkbox">
+                    <input class="contact-us__consent form-style" type="checkbox" name="consent" required>
+                    <label for="">Я даю согласие на обработку персональных данных</label>
+                </div>
+                <a id="modal-close" class="call-btn popup-modal-dismiss popup-modal" href="#success-modal">Заказать звонок</a>
+            </form>
 
+        </div>
 
     </div>
 
+    <div id="success-modal" class="mfp-hide white-popup-block">
+        <a class="close-modal popup-modal-dismiss" href="#"></a>
+        <h3 class="success-modal__title">
+            Вы успешно отправили заявку
+        </h3>
+        <p class=success-modal__text ">
+            Наш менеджер свяжется с вами как можно скорее
+        </p>
+        <a class="call-btn popup-modal-dismiss " href="# ">Закрыть</a>
+    </div>
 
 
-
-    <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/libs.min.js "></script>
+    <script src="js/main.min.js "></script>
 </body>
 
 </html>
