--- a/app/index.html
+++ b/app/index.html
@@ -15,11 +15,9 @@
 
 <body>
 
-    <a id="button"></a>
-
     <div id="fullpage">
 
-        <div class="section  fp-auto-height-responsive">
+        <div class="section">
 
             <header id="header" class="header">
                 <div class="container">
@@ -44,9 +42,6 @@
                                     </li>
                                     <li class="header__menu-item">
                                         <a href="#">Наши партнеры</a>
-                                    </li>
-                                    <li class="header__menu-item">
-                                        <a href="#">О нас</a>
                                     </li>
                                     <li class="header__menu-item">
                                         <a href="#">Контакты</a>
@@ -171,19 +166,19 @@
                             </picture>
                         </div>
                         <div class="about-us__info">
-                            <div class="about-us__box">
-                                <h2 class="about-us__box-title">
+                            <div class="about-us__item">
+                                <h2 class="about-us__item-title">
                                     8 лет
                                 </h2>
-                                <p class="about-us__box-text">
+                                <p class="about-us__item-text">
                                     Мы успешно развиваемся на рынке сантехники уже 8 лет.
                                 </p>
                             </div>
-                            <div class="about-us__box">
-                                <h2 class="about-us__box-title">
+                            <div class="about-us__item">
+                                <h2 class="about-us__item-title">
                                     6 568
                                 </h2>
-                                <p class="about-us__box-text">
+                                <p class="about-us__item-text">
                                     Наш ассортимент насчитывает более 6 тысяч товаров
                                 </p>
                             </div>
@@ -205,7 +200,10 @@
                             <div class="our-production__box-title">
                                 <h1 class="our-production__title">Наша продукция</h1>
                             </div>
-                            <div class="our-production__box">
+                            <div class="1 our-production__box"></div>
+                            <div class="2 our-production__box"></div>
+                            <div class="3 our-production__box"></div>
+                            <div class="4 our-production__box">
                                 <div class="our-production__box-img">
                                     <picture>
                                         <source type="image/webp" srcset="images/heating-elements.webp 1x, images/heating-elements@2x.webp 2x, images/heating-elements@3x.webp 3x">
@@ -216,7 +214,8 @@
                                     Тэны для стиральных машин и водонагревателей
                                 </div>
                             </div>
-                            <div class="our-production__box">
+                            <div class="5 our-production__box"></div>
+                            <div class="6 our-production__box">
                                 <div class="our-production__box-img">
                                     <picture>
                                         <source type="image/webp" srcset="images/plastic-pipes.webp 1x, images/plastic-pipes@2x.webp 2x, images/plastic-pipes@3x.webp 3x">
@@ -227,7 +226,7 @@
                                     Товары для водоснабжения, отопления и канализации
                                 </p>
                             </div>
-                            <div class="our-production__box"></div>
+                            <div class="7 our-production__box"></div>
                         </div>
                         <div class="our-production__content-bottom">
                             <div class="our-production__box"></div>
@@ -385,11 +384,11 @@
                             <form class="contact-us__form" action="" method="">
                                 <div class="contact-us__form-box">
                                     <label for="">Ваше имя</label>
-                                    <input class="contact-us__input-name" type="text" name="name" placeholder="Константин" required>
+                                    <input class="contact-us__input-name" type="text" name="name" placeholder="_ _ _ _ _ _ _ _ _ _ _ _" required>
                                 </div>
                                 <div class="contact-us__form-box">
                                     <label for="">Номер телефона</label>
-                                    <input class="contact-us__input-tel" type="tel" name="tel" placeholder="+7 XXX XXX XX XX" required>
+                                    <input class="contact-us__input-tel tel" type="tel" name="tel" placeholder="+7(___) ___ __ __" required>
                                 </div>
                                 <div class="contact-us__checkbox">
                                     <input class="contact-us__consent form-style" type="checkbox" name="consent" required>
@@ -443,8 +442,8 @@
                             <a class="footer__link-insta" href="#">
                                 <img src="images/icon-insta.svg" alt="">
                             </a>
-                            <a class="call-btn popup-modal" href="#call-me-modal">Заказать звонок</a>
                         </div>
+                        <a class="call-btn popup-modal" href="#call-me-modal">Заказать звонок</a>
 
                     </div>
                 </div>
@@ -467,11 +466,11 @@
             <form class="contact-us__form" action="" method="">
                 <div class="contact-us__form-box">
                     <label for="">Ваше имя</label>
-                    <input id="username" class="contact-us__input-name" type="text" name="name" placeholder="Константин" required>
+                    <input id="username" class="contact-us__input-name" type="text" name="name" placeholder="_ _ _ _ _ _ _ _ _ _ _ _" required>
                 </div>
                 <div class="contact-us__form-box">
                     <label for="">Номер телефона</label>
-                    <input class="contact-us__input-tel" type="tel" name="tel" placeholder="+7 XXX XXX XX XX" required>
+                    <input class="contact-us__input-tel" type="tel" name="tel" placeholder="+7(___) ___ __ __" required>
                 </div>
                 <div class="contact-us__checkbox">
                     <input class="contact-us__consent form-style" type="checkbox" name="consent" required>
