--- a/app/partners.html
+++ b/app/partners.html
@@ -40,9 +40,6 @@
                                 <a href="#">Наши партнеры</a>
                             </li>
                             <li class="header__menu-item">
-                                <a href="#">О нас</a>
-                            </li>
-                            <li class="header__menu-item">
                                 <a href="#">Контакты</a>
                             </li>
                         </ul>
@@ -154,8 +151,8 @@
                     <a class="footer__link-insta" href="#">
                         <img src="images/icon-insta.svg" alt="">
                     </a>
-                    <a class="call-btn popup-modal" href="#call-me-modal">Заказать звонок</a>
                 </div>
+                <a class="call-btn popup-modal" href="#call-me-modal">Заказать звонок</a>
 
             </div>
         </div>
@@ -175,11 +172,11 @@
             <form class="contact-us__form" action="" method="">
                 <div class="contact-us__form-box">
                     <label for="">Ваше имя</label>
-                    <input id="username" class="contact-us__input-name" type="text" name="name" placeholder="Константин" required>
+                    <input id="username" class="contact-us__input-name" type="text" name="name" placeholder="_ _ _ _ _ _ _ _ _ _ _ _" required>
                 </div>
                 <div class="contact-us__form-box">
                     <label for="">Номер телефона</label>
-                    <input class="contact-us__input-tel" type="tel" name="tel" placeholder="+7 XXX XXX XX XX" required>
+                    <input class="contact-us__input-tel tel" type="tel" name="tel" placeholder="+7(___) ___ __ __" required>
                 </div>
                 <div class="contact-us__checkbox">
                     <input class="contact-us__consent form-style" type="checkbox" name="consent" required>
